style: contains모듈 이름 common으로 변경, 공용/편의기능 모듈의 상수, 함수 namespace로 랩핑, #include import로 변경

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -131,7 +131,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AntSimulation.cpp" />
-    <ClCompile Include="Contains.ixx" />
+    <ClCompile Include="Common.ixx" />
     <ClCompile Include="LogManager.cpp" />
     <ClCompile Include="LogManager.ixx" />
     <ClCompile Include="Utils.ixx" />
