--- a/AntSimulation/AntSimulation.vcxproj.filters
+++ b/AntSimulation/AntSimulation.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="Utils.cpp">
       <Filter>유틸</Filter>
     </ClCompile>
+    <ClCompile Include="Interface.ixx">
+      <Filter>유틸</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
