feat: ComponentBase 추가
- Draw는 안 할 수도 있지만 Update는 필수적이므로 IUpdate 상속함

--- a/AntSimulation/AntSimulation.vcxproj.filters
+++ b/AntSimulation/AntSimulation.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="Interface.ixx">
       <Filter>유틸</Filter>
     </ClCompile>
+    <ClCompile Include="Component.ixx">
+      <Filter>게임 오브젝트\기능</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
