--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="AntSimulation.cpp" />
     <ClCompile Include="Common.ixx" />
     <ClCompile Include="Interface.ixx" />
+    <ClCompile Include="Component.ixx" />
     <ClCompile Include="LogManager.cpp" />
     <ClCompile Include="LogManager.ixx" />
     <ClCompile Include="Utils.ixx" />
