feat: 추상클래스 GameObject 추가
1. 기본정보인 필드 좌표, 이름, 무게만 가지고있음
2. 기능은 컴포넌트 부착하는 식으로 동작, 컴포넌트는 allComponents에 수납
3. 컴포넌트타입으로 컴포넌트 꺼내기 가능

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -134,8 +134,11 @@
     <ClCompile Include="Common.ixx" />
     <ClCompile Include="Interface.ixx" />
     <ClCompile Include="Component.ixx" />
+    <ClCompile Include="Concepts.ixx" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="LogManager.cpp" />
     <ClCompile Include="LogManager.ixx" />
+    <ClCompile Include="GameObject.ixx" />
     <ClCompile Include="Utils.ixx" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
