--- a/AntSimulation/AntSimulation.vcxproj.filters
+++ b/AntSimulation/AntSimulation.vcxproj.filters
@@ -54,5 +54,14 @@
     <ClCompile Include="Component.ixx">
       <Filter>게임 오브젝트\기능</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject.ixx">
+      <Filter>게임 오브젝트</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>게임 오브젝트</Filter>
+    </ClCompile>
+    <ClCompile Include="Concepts.ixx">
+      <Filter>유틸</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
