feat: 컴포넌트가 GameObject& owner 소유하게 수정, 컴포넌트 생성자 대응 GameObject::AddComponent 템플릿 함수 수정

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Common.ixx" />
     <ClCompile Include="Interface.ixx" />
     <ClCompile Include="Component.ixx" />
+    <ClCompile Include="ComponentBase.cpp" />
     <ClCompile Include="Concepts.ixx" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="LogManager.cpp" />
