--- a/AntSimulation/AntSimulation.vcxproj.filters
+++ b/AntSimulation/AntSimulation.vcxproj.filters
@@ -1,52 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="로그">
-      <UniqueIdentifier>{acb4e389-f8c7-44f0-8310-a687cac69c2e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="게임매니저">
-      <UniqueIdentifier>{4076174d-c709-4d13-a954-1b719f08bf97}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="유틸">
-      <UniqueIdentifier>{6dd85d53-8931-4fc2-9299-c0368d67e0d2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="게임 오브젝트">
-      <UniqueIdentifier>{6ade90b5-a6fa-43a1-8b5a-f55618c94c4b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="게임 오브젝트\개미">
-      <UniqueIdentifier>{16000756-109f-41e3-8a92-47eb0536afde}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="게임 오브젝트\먹이">
-      <UniqueIdentifier>{f6600d34-09ce-4bd1-9e7a-c64abe86d2bc}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="게임 오브젝트\기능">
-      <UniqueIdentifier>{c1950ace-40c8-4137-b678-525e1fee0629}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="게임 오브젝트\기능\오브젝트 이동">
-      <UniqueIdentifier>{a296b625-ef80-4aa9-82dc-52b5055ee9f0}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="LogManager.ixx">
-      <Filter>로그</Filter>
-    </ClCompile>
-    <ClCompile Include="LogManager.cpp">
-      <Filter>로그</Filter>
-    </ClCompile>
-    <ClCompile Include="Common.ixx">
-      <Filter>유틸</Filter>
-    </ClCompile>
+    <ClCompile Include="AntSimulation.cpp" />
     <ClCompile Include="Utils.ixx">
-      <Filter>유틸</Filter>
+      <Filter>커먼\유틸</Filter>
     </ClCompile>
     <ClCompile Include="Utils.cpp">
-      <Filter>유틸</Filter>
+      <Filter>커먼\유틸</Filter>
     </ClCompile>
-    <ClCompile Include="Interface.ixx">
-      <Filter>유틸</Filter>
+    <ClCompile Include="Common.ixx">
+      <Filter>커먼</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentBase.cpp">
+      <Filter>게임 오브젝트\기능</Filter>
+    </ClCompile>
+    <ClCompile Include="Field.ixx">
+      <Filter>필드</Filter>
+    </ClCompile>
+    <ClCompile Include="Field.cpp">
+      <Filter>필드</Filter>
+    </ClCompile>
+    <ClCompile Include="Concepts.ixx">
+      <Filter>커먼</Filter>
     </ClCompile>
     <ClCompile Include="Component.ixx">
       <Filter>게임 오브젝트\기능</Filter>
+    </ClCompile>
+    <ClCompile Include="GameManager.cpp">
+      <Filter>게임매니저</Filter>
+    </ClCompile>
+    <ClCompile Include="GameManager.ixx">
+      <Filter>게임매니저</Filter>
     </ClCompile>
     <ClCompile Include="GameObject.ixx">
       <Filter>게임 오브젝트</Filter>
@@ -54,11 +38,55 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>게임 오브젝트</Filter>
     </ClCompile>
-    <ClCompile Include="Concepts.ixx">
-      <Filter>유틸</Filter>
+    <ClCompile Include="Interface.ixx">
+      <Filter>커먼</Filter>
     </ClCompile>
-    <ClCompile Include="ComponentBase.cpp">
-      <Filter>게임 오브젝트\기능</Filter>
+    <ClCompile Include="Ant.cpp">
+      <Filter>게임 오브젝트\개미</Filter>
     </ClCompile>
+    <ClCompile Include="Ant.ixx">
+      <Filter>게임 오브젝트\개미</Filter>
+    </ClCompile>
+    <ClCompile Include="Movement.cpp">
+      <Filter>게임 오브젝트\기능\오브젝트 이동</Filter>
+    </ClCompile>
+    <ClCompile Include="Movement.ixx">
+      <Filter>게임 오브젝트\기능\오브젝트 이동</Filter>
+    </ClCompile>
+    <ClCompile Include="LogManager.cpp">
+      <Filter>로그</Filter>
+    </ClCompile>
+    <ClCompile Include="LogManager.ixx">
+      <Filter>로그</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="커먼">
+      <UniqueIdentifier>{eb90f8fd-09f4-4790-9658-6c7eb5a72cc3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="커먼\유틸">
+      <UniqueIdentifier>{439504e0-2a02-4324-b0d9-ef0598d22503}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="게임 오브젝트">
+      <UniqueIdentifier>{473cb720-b485-49c8-8807-56d0916ad8f5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="게임 오브젝트\개미">
+      <UniqueIdentifier>{064ffc10-cbf4-4e6f-977c-eb2c161fa7f6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="필드">
+      <UniqueIdentifier>{79e13762-97e8-4491-a312-751e59a9ec13}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="게임 오브젝트\기능">
+      <UniqueIdentifier>{9189c9b0-5777-48b5-9196-70206187123a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="게임 오브젝트\기능\오브젝트 이동">
+      <UniqueIdentifier>{241f27e0-8587-4f3f-a863-50c9cac21d92}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="게임매니저">
+      <UniqueIdentifier>{49cf3d08-9253-4e70-9535-ab1d4ed525cf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="로그">
+      <UniqueIdentifier>{07031434-ab07-4c8c-ac02-8dc1eb050332}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
