feat: Field 클래스 추가
1. Tile로 구성된 tiles를 보유
2. 각 타일에 오브젝트 배치 상태 관리

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -132,6 +132,8 @@
   <ItemGroup>
     <ClCompile Include="AntSimulation.cpp" />
     <ClCompile Include="Common.ixx" />
+    <ClCompile Include="Field.cpp" />
+    <ClCompile Include="Field.ixx" />
     <ClCompile Include="Interface.ixx" />
     <ClCompile Include="Component.ixx" />
     <ClCompile Include="ComponentBase.cpp" />
