feat: 게임매니저 추가
- 역할 : 게임 내 모든 요소 - 필드, 오브젝트, 로그 관리. Update, Draw 관장

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -140,6 +140,8 @@
     <ClCompile Include="Component.ixx" />
     <ClCompile Include="ComponentBase.cpp" />
     <ClCompile Include="Concepts.ixx" />
+    <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="GameManager.ixx" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="LogManager.cpp" />
     <ClCompile Include="LogManager.ixx" />
