refactor: 콘솔 설정 관련 코드 console.ixx로 분리, windows.h 헤더 AntSimulation.cpp에서 제외

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -134,6 +134,8 @@
     <ClCompile Include="Ant.ixx" />
     <ClCompile Include="AntSimulation.cpp" />
     <ClCompile Include="Common.ixx" />
+    <ClCompile Include="Console.cpp" />
+    <ClCompile Include="Console.ixx" />
     <ClCompile Include="Field.cpp" />
     <ClCompile Include="Field.ixx" />
     <ClCompile Include="Interface.ixx" />
