feat: 개미집 추가
1. AntHome 클래스 추가
2. AntHoem에서는 개미가 집에 들어올 경우 일정 주기마다 개미를 방출
3. 시작시 개미집에 개미 10마리 넣어둠

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -132,6 +132,8 @@
   <ItemGroup>
     <ClCompile Include="Ant.cpp" />
     <ClCompile Include="Ant.ixx" />
+    <ClCompile Include="AntHome.cpp" />
+    <ClCompile Include="AntHome.ixx" />
     <ClCompile Include="AntSimulation.cpp" />
     <ClCompile Include="Common.ixx" />
     <ClCompile Include="Console.cpp" />
