refactor: 오브젝트 생성용 CreateGameObject 함수 추가, 오브젝트 생성 일원화
오브젝트를 놓을 수 있는 위치인지 검증 후 생성하고 배치

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Coroutines.ixx" />
     <ClCompile Include="Field.cpp" />
     <ClCompile Include="Field.ixx" />
+    <ClCompile Include="GameObjectFactory.cpp" />
     <ClCompile Include="Interface.ixx" />
     <ClCompile Include="Component.ixx" />
     <ClCompile Include="ComponentBase.cpp" />
