feat: Food클래스 추가
1. Ant 클래스에 운반 오브젝트 슬롯 추가
2. 개미-음식 충돌시 개미가 운반중인 오브젝트가 없으면 음식을 슬롯에 넣도록 함
3. 개미가 집에 들어갈 때 좌표 조정함

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -141,6 +141,8 @@
     <ClCompile Include="Coroutines.ixx" />
     <ClCompile Include="Field.cpp" />
     <ClCompile Include="Field.ixx" />
+    <ClCompile Include="Food.cpp" />
+    <ClCompile Include="Food.ixx" />
     <ClCompile Include="GameObjectFactory.cpp" />
     <ClCompile Include="Interface.ixx" />
     <ClCompile Include="Component.ixx" />
