--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="GameObject.ixx" />
     <ClCompile Include="Movement.cpp" />
     <ClCompile Include="Movement.ixx" />
+    <ClCompile Include="Singleton.ixx" />
     <ClCompile Include="Utils.ixx" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
