--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -144,6 +144,8 @@
     <ClCompile Include="Food.cpp" />
     <ClCompile Include="Food.ixx" />
     <ClCompile Include="GameObjectFactory.cpp" />
+    <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="InputManager.ixx" />
     <ClCompile Include="Interface.ixx" />
     <ClCompile Include="Component.ixx" />
     <ClCompile Include="ComponentBase.cpp" />
