fix: 순환참조오류 수정
GameManager, Field, GameObject 삼각관계 해소
GameManger-GameObject 의존성 분리를 위해 GameManager 랩핑용 interface 추가

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="GameObjectFactory.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="InputManager.ixx" />
+    <ClCompile Include="Interface.cpp" />
     <ClCompile Include="Interface.ixx" />
     <ClCompile Include="Component.ixx" />
     <ClCompile Include="ComponentBase.cpp" />
