--- a/AntSimulation/AntSimulation.vcxproj.filters
+++ b/AntSimulation/AntSimulation.vcxproj.filters
@@ -38,9 +38,6 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>게임 오브젝트</Filter>
     </ClCompile>
-    <ClCompile Include="Interface.ixx">
-      <Filter>커먼</Filter>
-    </ClCompile>
     <ClCompile Include="Ant.cpp">
       <Filter>게임 오브젝트\개미</Filter>
     </ClCompile>
@@ -92,6 +89,12 @@
     <ClCompile Include="InputManager.cpp">
       <Filter>인풋매니저</Filter>
     </ClCompile>
+    <ClCompile Include="Interface.ixx">
+      <Filter>커먼\인터페이스</Filter>
+    </ClCompile>
+    <ClCompile Include="Interface.cpp">
+      <Filter>커먼\인터페이스</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="커먼">
@@ -135,6 +138,9 @@
     </Filter>
     <Filter Include="인풋매니저">
       <UniqueIdentifier>{6140d83c-6c5c-435a-adda-b2df2f0a0dcc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="커먼\인터페이스">
+      <UniqueIdentifier>{941b0cea-0b82-4fa1-ac97-10826d37e8af}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
