refactor: 모듈 포함관계 정리
1. module common을 기능별로 쪼개어 필요한 곳에 필요한 요소만 들어갈 수 있게 수정
2. 클래스 전방선언, 상수 등 전반적으로 필요할 법한 요소들 module core로 모아둠
3. 전체적인 포함관계 정돈

--- a/AntSimulation/AntSimulation.vcxproj
+++ b/AntSimulation/AntSimulation.vcxproj
@@ -135,9 +135,10 @@
     <ClCompile Include="AntHome.cpp" />
     <ClCompile Include="AntHome.ixx" />
     <ClCompile Include="AntSimulation.cpp" />
-    <ClCompile Include="Common.ixx" />
+    <ClCompile Include="Collision_common.ixx" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="Console.ixx" />
+    <ClCompile Include="Core.ixx" />
     <ClCompile Include="Coroutines.ixx" />
     <ClCompile Include="Field.cpp" />
     <ClCompile Include="Field.ixx" />
@@ -146,8 +147,7 @@
     <ClCompile Include="GameObjectFactory.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="InputManager.ixx" />
-    <ClCompile Include="Interface.cpp" />
-    <ClCompile Include="Interface.ixx" />
+    <ClCompile Include="Input_common.ixx" />
     <ClCompile Include="Component.ixx" />
     <ClCompile Include="ComponentBase.cpp" />
     <ClCompile Include="Concepts.ixx" />
@@ -160,6 +160,9 @@
     <ClCompile Include="Movement.cpp" />
     <ClCompile Include="Movement.ixx" />
     <ClCompile Include="Singleton.ixx" />
+    <ClCompile Include="Field_common.ixx" />
+    <ClCompile Include="interfaces.cpp" />
+    <ClCompile Include="interfaces.ixx" />
     <ClCompile Include="Utils.ixx" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
